Add server version 00.00.01

--- a/MyAspNetApp/appsettings.json
+++ b/MyAspNetApp/appsettings.json
@@ -21,9 +21,9 @@
     ]
   },
     "Twilio": {
-      "AccountSid": "",
-      "AuthToken": "",
-      "PhoneNumber": ""
+      "AccountSid": "ACf0f1d86f38c5bda91c284e48368d4784",
+      "AuthToken": "14279f4c3c01e86463fce429d7e9dfc7",
+      "PhoneNumber": "+17753638159"
     }
   
   
