add server version 00.01.00

--- a/MyAspNetApp/appsettings.json
+++ b/MyAspNetApp/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5433;Username=postgres;Password=010306;Database=DBTelebot;MinPoolSize=5;MaxPoolSize=20;"
+    "DefaultConnectionDataBase": "Host=localhost;Port=5433;Username=postgres;Password=010306;Database=DBTelebot;MinPoolSize=5;MaxPoolSize=20;",
+    "DefaultConnectionTelegramBot":""
   },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
@@ -21,9 +22,9 @@
     ]
   },
     "Twilio": {
-      "AccountSid": "ACf0f1d86f38c5bda91c284e48368d4784",
-      "AuthToken": "14279f4c3c01e86463fce429d7e9dfc7",
-      "PhoneNumber": "+17753638159"
+      "AccountSid": "",
+      "AuthToken": "",
+      "PhoneNumber": "+"
     }
   
   
