--- a/MyAspNetApp/MyAspNetApp.csproj
+++ b/MyAspNetApp/MyAspNetApp.csproj
@@ -13,6 +13,8 @@
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="7.2.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="9.0.1" />
+    <PackageReference Include="Telegram.Bot" Version="22.3.0" />
     <PackageReference Include="Twilio" Version="7.8.3" />
   </ItemGroup>
 
