add server version 01.00.00

--- a/MyAspNetApp/appsettings.json
+++ b/MyAspNetApp/appsettings.json
@@ -24,7 +24,7 @@
     "Twilio": {
       "AccountSid": "",
       "AuthToken": "",
-      "PhoneNumber": "+"
+      "PhoneNumber": ""
     }
   
   
