--- a/MyAspNetApp/appsettings.json
+++ b/MyAspNetApp/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnectionDataBase": "Host=localhost;Port=5433;Username=postgres;Password=010306;Database=DBTelebot;MinPoolSize=5;MaxPoolSize=20;",
-    "DefaultConnectionTelegramBot":"7415665483:AAGfRb41Oyf54_fDZeiZ_R3_nd-C1JzLFNg"
+    "DefaultConnectionTelegramBot":""
   },
   "Serilog": {
     "Using": ["Serilog.Sinks.Console", "Serilog.Sinks.File"],
@@ -22,9 +22,9 @@
     ]
   },
     "Twilio": {
-      "AccountSid": "ACf0f1d86f38c5bda91c284e48368d4784",
-      "AuthToken": "14279f4c3c01e86463fce429d7e9dfc7",
-      "PhoneNumber": "+17753638159"
+      "AccountSid": "",
+      "AuthToken": "",
+      "PhoneNumber": ""
     }
   
   
